# KingEngine

./: CMakeLists.txt  ENGINE_IMPROVEMENTS_CHECKLIST.md  MATERIALS_AND_SHADERS.md  RENDERING_FEATURES.md
assets/shaders/: pbr_test.hlsl  rim_outline_glow.hlsl  unlit_color.hlsl
src/: king_window.cpp  king_window.h  main.cpp  thread_config_cli.cpp
src/king/: thread_config.cpp  thread_config.h
src/king/ecs/: components.h  entity.h  registry.h  scene.h  sparse_set.h
src/king/math/: dxmath.h  types.h
src/king/perf/: gpu_profiler_d3d11.cpp  gpu_profiler_d3d11.h  perf_analyzer.cpp  perf_analyzer.h
src/king/render/: material.cpp  material.h  shader.cpp  shader.h
src/king/render/d3d11/: fullscreen_pass_d3d11.cpp  fullscreen_pass_d3d11.h  post_process_d3d11.cpp  post_process_d3d11.h  render_device_d3d11.cpp  render_device_d3d11.h  render_system_d3d11.cpp  render_system_d3d11.h  shader_program_d3d11.cpp  shader_program_d3d11.h  shadows.cpp  shadows.h  texture_manager_d3d11.cpp  texture_manager_d3d11.h
src/king/scene/: camera.cpp  camera.h  frustum.cpp  frustum.h
src/king/systems/: camera_system.cpp  camera_system.h  lighting_system.cpp  lighting_system.h
src/king/time/: time.cpp  time.h
